@@ -1,6 +1,7 @@
 *.d
 *.dSYM
 *.o
+*.a
 *.fasl
 *.FASL
 *.lisp-temp
@@ -26,6 +27,7 @@ src/runtime/openbsd-sigcontext.h
 src/runtime/sbcl
 src/runtime/sbcl.exe
 src/runtime/sbcl.h
+src/runtime/sbcl.mk
 src/runtime/sbcl.nm
 src/runtime/target-arch-os.h
 src/runtime/target-arch.h
