@@ -32,6 +32,11 @@ else
   GC_SRC = cheneygc.c
 endif
 
+ifdef LISP_FEATURE_SB_LINKABLE_RUNTIME
+  LIBSBCL = libsbcl.a
+  USE_LIBSBCL = -Wl,-force_load libsbcl.a
+endif
+
 .PHONY: after-grovel-headers
 
 # Nothing to do.
