@@ -44,13 +44,17 @@ endif
 ifndef LISP_FEATURE_SB_DYNAMIC_CORE
   LINKFLAGS +=-Wl,-no_pie
 endif
+ifdef LISP_FEATURE_SB_LINKABLE_RUNTIME
+  LIBSBCL = libsbcl.a
+  USE_LIBSBCL = -Wl,-force_load libsbcl.a
+endif
 
 ASSEM_SRC = x86-64-assem.S ldso-stubs.S
 ARCH_SRC = x86-64-arch.c
 
 LINKFLAGS += -arch x86_64 -dynamic -twolevel_namespace -bind_at_load -pagezero_size 0x100000
 
-CFLAGS += -arch x86_64 -fno-omit-frame-pointer -pagezero_size 0x100000
+CFLAGS += -arch x86_64 -fno-omit-frame-pointer
 
 ifdef LISP_FEATURE_IMMOBILE_SPACE
   GC_SRC = gencgc.c marknsweepgc.c
