@@ -16,6 +16,11 @@ ARCH_SRC = x86-arch.c
 
 OS_SRC = win32-os.c x86-win32-os.c os-common.c pthreads_win32.c
 
+ifdef LISP_FEATURE_SB_LINKABLE_RUNTIME
+  LIBSBCL = libsbcl.a
+  USE_LIBSBCL = -Wl,--whole-archive libsbcl.a -Wl,--no-whole-archive
+endif
+
 # The "--Wl,--export-dynamic" flags are here to help people
 # experimenting with callbacks from C to SBCL, by allowing linkage to
 # SBCL src/runtime/*.c symbols from C. Work on this is good, but it's
@@ -28,7 +33,11 @@ OS_SRC = win32-os.c x86-win32-os.c os-common.c pthreads_win32.c
 # (You *are* encouraged to design and implement a coherent stable
 # interface, though.:-| As far as I (WHN 2002-05-19) know, no one is
 # working on one and it would be a nice thing to have.)
-LINKFLAGS = -Wl,-export-all-symbols -Wl,mswin.def
+LINKFLAGS = -Wl,-export-all-symbols
+LIBSBCL += mswin64.def mswin.def
+USE_LIBSBCL += -Wl,mswin64.def -Wl,mswin.def
+__LDFLAGS__ =
+
 OS_LIBS = -l ws2_32 -ladvapi32
 ifdef LISP_FEATURE_SB_CORE_COMPRESSION
   OS_LIBS += -lz
